<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vitin.mycomp.brainteaser.MainActivity"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_question"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="14dp"
        android:text="@string/hello_welcome"
        android:textColor="@color/colorAccent"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scored"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/true_button"
        android:id="@+id/trueButton"
        android:layout_marginTop="61dp"
        android:layout_below="@+id/text_question"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:textColor="@color/color_text"
        android:background="@android:drawable/sym_def_app_icon"
        android:minHeight="65dp"
        android:elevation="24dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/false_button"
        android:id="@+id/falseButton"
        android:layout_alignBaseline="@+id/trueButton"
        android:layout_alignBottom="@+id/trueButton"
        android:layout_centerHorizontal="true"
        android:textColor="@color/color_text"
        android:background="@android:drawable/sym_def_app_icon"
        android:minHeight="65dp"
        android:elevation="24dp" />


    <Button
        android:text="@string/button_cheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/falseButton"
        android:layout_alignLeft="@+id/falseButton"
        android:layout_alignStart="@+id/falseButton"
        android:layout_marginTop="21dp"
        android:id="@+id/button_cheat"
        android:textColor="@color/color_text"
        android:background="@android:drawable/btn_star_big_on"
        android:minHeight="95dp"
        android:elevation="24dp" />

    <Button
        android:text="@string/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:id="@+id/nextButton"
        android:textColor="@color/color_text"
        android:background="@android:drawable/sym_def_app_icon"
        android:minHeight="65dp"
        android:layout_alignBaseline="@+id/falseButton"
        android:layout_alignBottom="@+id/falseButton"
        android:layout_toRightOf="@+id/falseButton"
        android:layout_toEndOf="@+id/falseButton"
        android:elevation="24dp" />


</RelativeLayout>
